@@ -128,6 +128,7 @@ Localization
         #LOC_BDArmory_Settings_ShowEditorSubcategories = Show Editor Subcategories
         #LOC_BDArmory_Settings_AutocategorizeParts = Autocategorize Parts
         #LOC_BDArmory_Settings_waterDrag = Underwater Bullet Drag
+        #LOC_BDArmory_Settings_AutoLoadToKSC = Auto-Load To KSC
         #LOC_BDArmory_Settings_AutoResumeTournaments = Auto-Resume Tournaments
         #LOC_BDArmory_Settings_AutoQuitMemoryUsage = Auto-Quit Memory Threshold
         #LOC_BDArmory_Settings_CurrentMemoryUsageEstimate = Current Memory Usage Estimate
